--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div>
+        <input id="priceField" type="text" />
+        <button id="add">Add</button>
+      </div>
+
+      <div id="list">
+      </div>
+
+      <div>
+        <p><b>total price</b>: <span id="totalPrice">0</span></p>
+        <p><b>discount price</b>: <span id="discountPrice">0</span></p>
+      </div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
