--- a/index.html
+++ b/index.html
@@ -8,18 +8,7 @@
   </head>
   <body>
     <div id="app">
-      <div>
-        <input id="priceField" type="text" />
-        <button id="add">Add</button>
-      </div>
-
-      <div id="list">
-      </div>
-
-      <div>
-        <p><b>total price</b>: <span id="totalPrice">0</span></p>
-        <p><b>discount price</b>: <span id="discountPrice">0</span></p>
-      </div>
+      <div id="canvas-pane"></div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
